--- a/mall-protocol/pom.xml
+++ b/mall-protocol/pom.xml
@@ -9,7 +9,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
-	<name>mall</name>
+	<name>mall-protocol</name>
 	<url>http://www.ydual.com</url>
 
 	<properties>
@@ -58,6 +58,7 @@
 			</plugin>
 		</plugins>
 	</build>
+	
 	<modules>
 		<module>mall-web</module>
 		<module>mall-common</module>
