--- a/mall-protocol/mall-customer/pom.xml
+++ b/mall-protocol/mall-customer/pom.xml
@@ -14,18 +14,12 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>mall-customer Maven Webapp</name>
-	<url>http://maven.apache.org</url>
+	<url>http://www.ydual.com</url>
 	<dependencies>
 		<dependency>
 			<groupId>com.ydual</groupId>
 			<artifactId>mall-common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<build>
