--- a/mall-protocol/mall-goodsmgr/pom.xml
+++ b/mall-protocol/mall-goodsmgr/pom.xml
@@ -11,16 +11,10 @@
   <artifactId>mall-goodsmgr</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>mall-goodsmgr</name>
-  <url>http://maven.apache.org</url>
+  <url>http://www.ydual.com</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
 </project>
