--- a/mall-protocol/mall-admin/pom.xml
+++ b/mall-protocol/mall-admin/pom.xml
@@ -15,6 +15,23 @@
 	<name>mall-admin Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
+		<!-- memcached -->
+		<dependency>
+			<groupId>com.googlecode.xmemcached</groupId>
+			<artifactId>xmemcached</artifactId>
+			<version>2.4.6</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.simple-spring-memcached</groupId>
+			<artifactId>xmemcached-provider</artifactId>
+			<version>4.1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.simple-spring-memcached</groupId>
+			<artifactId>simple-spring-memcached</artifactId>
+			<version>4.1.3</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.ydual</groupId>
 			<artifactId>mall-common</artifactId>
