--- a/xgen/pom.xml
+++ b/xgen/pom.xml
@@ -22,6 +22,21 @@
       <version>2.0b6</version>
     </dependency>
     
+    <!-- https://mvnrepository.com/artifact/spy/memcached -->
+	<dependency>
+	    <groupId>spy</groupId>
+	    <artifactId>memcached</artifactId>
+	    <version>2.4rc1</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/com.twitter/finagle-memcached -->
+	<!-- <dependency>
+	    <groupId>com.twitter</groupId>
+	    <artifactId>finagle-memcached_2.12</artifactId>
+	    <version>6.41.0</version>
+	</dependency> -->
+	
+    
+    
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
